Return extractions into a 'table' DF variable

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -148,6 +148,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is the output: csv table of extracted entities/relations.\n",
+    "table_extractions = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Define Widgets\n",
     "bbs_widgets = OrderedDict()\n",
     "\n",
@@ -163,11 +173,12 @@
     "    layout=ipywidgets.Layout(width='30%')\n",
     ")\n",
     "def cb(b):\n",
+    "    global table_extractions\n",
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        df_extracted_elements = run_pipeline(text, ee_model, re_models)\n",
-    "        display(df_extracted_elements)\n",
+    "        table_extractions = run_pipeline(text, ee_model, re_models)\n",
+    "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
     "# \"Output Area\" Widget\n",
@@ -177,20 +188,6 @@
     "ordered_widgets = list(bbs_widgets.values())\n",
     "main_widget = ipywidgets.VBox(ordered_widgets)\n",
     "IPython.display.display(main_widget)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# This is the output: csv table of extracted entities/relations.\n",
-    "table = None"
    ]
   },
   {
@@ -204,15 +201,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# This returns the dimensionality of the extracted data.\n",
-    "table.shape"
+    "table_extractions.shape"
    ]
   },
   {
