Updated the notebook sections to match the KG building process steps

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -42,6 +42,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Set a Project\n",
+    "The User choses/creates a project to host a KG."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Set topic\n",
     "The user defines its topic."
    ]
@@ -57,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import data\n",
+    "# Data Import\n",
     "The user loads data from a data source (CORD-19).\n",
     "The loaded data forms the corpus.\n",
     "The user searches the CORPUS in Blue Brain Search."
@@ -213,7 +221,15 @@
    "metadata": {},
    "source": [
     "# Validate the knowledge graph\n",
-    "User reviews content of Knowledge Graph."
+    "Thee User reviews content of Knowledge Graph."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correct knowledge graph\n",
+    "The correct the Knowledge Graph is errors occur."
    ]
   },
   {
@@ -242,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Save and version the knowledge graph\n",
+    "# Version the knowledge graph\n",
     "The user can save a knowledge graph with a version."
    ]
   },
