Add code from search_widget to BBS_BBG_poc

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -10,7 +10,8 @@
     "  without rewriting its metadata inside.\n",
     "- [ ] SciBERT can not be obtained with `pip install`, so currently one needs to \n",
     "    1. `git clone https://github.com/allenai/scibert.git`\n",
-    "    2. `export PYTHONPATH=$PYTHONPATH:PATH_TO_SCIBERT`\n"   ]
+    "    2. `export PYTHONPATH=$PYTHONPATH:PATH_TO_SCIBERT`\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -22,11 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from collections import OrderedDict\n",
+    "import logging\n",
     "from pathlib import Path\n",
     "\n",
     "import IPython\n",
@@ -35,7 +37,11 @@
     "import scispacy\n",
     "import spacy\n",
     "\n",
-    "from bbsearch.mining import ChemProt, run_pipeline"
+    "from bbsearch.data import AllData\n",
+    "from bbsearch.embedding_models import EmbeddingModels\n",
+    "from bbsearch.mining import ChemProt, run_pipeline\n",
+    "from bbsearch.precomputed_embeddings import PrecomputedEmbeddings\n",
+    "from bbsearch.widget import Widget"
    ]
   },
   {
@@ -56,10 +62,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/sschmidt/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/sschmidt/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download(\"punkt\")\n",
+    "nltk.download(\"stopwords\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DATASET_VERSION = 'v7'\n",
+    "\n",
+    "data_path = Path(\"/raid/covid_data/data/\") / DATASET_VERSION\n",
+    "assets_path = Path(\"/raid/covid_data/assets\")\n",
+    "embeddings_path = data_path / \"embeddings\"\n",
+    "\n",
+    "models_to_load=[\"SBIOBERT\", \"BSV\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-16e15d06879e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mall_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mAllData\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0membedding_models\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mEmbeddingModels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0massets_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodels_to_load\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprecomputed_embeddings\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mPrecomputedEmbeddings\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0membeddings_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodels_to_load\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Code/BlueBrainSearch/src/bbsearch/data.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, data_path, cord_path, databases_path, embeddings_path)\u001b[0m\n\u001b[1;32m     14\u001b[0m                  cord_path=None, databases_path=None, embeddings_path=None):\n\u001b[1;32m     15\u001b[0m         \u001b[0mlogger\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Setting data paths...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0mdata_path\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_path\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "all_data = AllData(data_path)\n",
+    "embedding_models = EmbeddingModels(assets_path, models_to_load)\n",
+    "precomputed_embeddings = PrecomputedEmbeddings(embeddings_path, models_to_load)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'all_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-0d5303443631>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbbs_widget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWidget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0membedding_models\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprecomputed_embeddings\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mbbs_widget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'all_data' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "bbs_widget = Widget(all_data, embedding_models, precomputed_embeddings)\n",
+    "bbs_widget.display()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -286,8 +379,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
-  }
+   "version": "3.6.10"
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
