Return confidence for extracted relations

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -124,8 +124,8 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        df_extracted_elements = run_pipeline(text, ee_model, re_models)\n",
-    "        display(df_extracted_elements)\n",
+    "        table_extractions = run_pipeline(text, ee_model, re_models, return_prob=True)\n",
+    "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
     "# \"Output Area\" Widget\n",
