Let run entity linking and kg building with example data

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -265,15 +265,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPORARY This is an example to demonstrate the following part.\n",
+    "# TEMPORARY Enable people to run the following part outside of DGX-1.\n",
     "import pandas as pd\n",
     "\n",
-    "table_extractions = pd.DataFrame({\n",
-    "    'entity': ['arginine', 'autophagy gene', 'mice'],\n",
-    "    'paper_id': ['https://doi.org/10.1038/s41586-018-0697-7'] * 3,\n",
-    "    'start': [54, 288, 317],\n",
-    "    'end': [62, 302, 321],\n",
-    "})"
+    "! wget -O extractions_example.csv 'https://drive.google.com/uc?export=download&id=11BBtkKsamru4kjUNev8lO_ulNMf7m3Ta'\n",
+    "\n",
+    "table_extractions = pd.read_csv('extractions_example.csv', sep=';')"
    ]
   },
   {
@@ -384,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPORARY Retrieve entity_linking-terms.pkl.\n",
+    "# TEMPORARY Retrieve entity_linking-terms.pkl (~ 5 MB).\n",
     "! wget -O entity_linking-terms.pkl 'https://drive.google.com/uc?export=download&id=1DyA9WL1YpEBO37KkDSCY3f1LWFfscO7F'"
    ]
   },
