Refactor pipeline as a class

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -36,12 +36,16 @@
     "import pandas as pd\n",
     "import scispacy\n",
     "import spacy\n",
+    "import nltk\n",
     "\n",
     "from bbsearch.data import AllData\n",
     "from bbsearch.embedding_models import EmbeddingModels\n",
-    "from bbsearch.mining import ChemProt, run_pipeline\n",
+    "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
     "from bbsearch.precomputed_embeddings import PrecomputedEmbeddings\n",
-    "from bbsearch.widget import Widget"
+    "from bbsearch.widget import Widget\n",
+    "\n",
+    "nltk.download(\"punkt\")\n",
+    "nltk.download(\"stopwords\")"
    ]
   },
   {
@@ -82,17 +86,6 @@
     "The user loads data from a data source (CORD-19).\n",
     "The loaded data forms the corpus.\n",
     "The user searches the CORPUS in Blue Brain Search."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import nltk\n",
-    "nltk.download(\"punkt\")\n",
-    "nltk.download(\"stopwords\")"
    ]
   },
   {
@@ -207,7 +200,10 @@
     "# Relations Extractors (RE)\n",
     "PATH_ASSETS = Path('/raid/covid_data/assets')\n",
     "PATH_CHEMPROT_TRAINED_MODEL = PATH_ASSETS / 'scibert_chemprot.tar.gz'\n",
-    "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}"
+    "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
+    "\n",
+    "# Full Pipeline\n",
+    "text_mining_pipeline = TextMiningPipeline(ee_model, re_models)"
    ]
   },
   {
@@ -245,7 +241,7 @@
     "    bbs_widgets['out'].clear_output()\n",
     "    with bbs_widgets['out']:\n",
     "        text = bbs_widgets['input_text'].value\n",
-    "        table_extractions = run_pipeline(text, ee_model, re_models, return_prob=True)\n",
+    "        table_extractions = text_mining_pipeline(text, return_prob=True)\n",
     "        display(table_extractions)\n",
     "bbs_widgets['submit_button'].on_click(cb)\n",
     "\n",
