--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -40,14 +40,9 @@
     "import spacy\n",
     "import nltk\n",
     "\n",
-    "from bbsearch.data import AllData\n",
-    "from bbsearch.embedding_models import EmbeddingModels\n",
+    "import bbsearch.embedding_models as embedding_models\n",
     "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
-    "from bbsearch.precomputed_embeddings import PrecomputedEmbeddings\n",
-    "from bbsearch.widget import Widget\n",
-    "\n",
-    "nltk.download(\"punkt\")\n",
-    "nltk.download(\"stopwords\")"
+    "from bbsearch.widget import Widget"
    ]
   },
   {
@@ -274,11 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TEMPORARY The specific requirements needed for the following part. Waiting for decision.\n",
@@ -289,17 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TEMPORARY This is an example to demonstrate the following part.\n",
     "import pandas as pd\n",
     "\n",
-    "table = pd.DataFrame({\n",
+    "table_extractions = pd.DataFrame({\n",
     "    'entity': ['arginine', 'autophagy gene', 'mice'],\n",
     "    'paper_id': ['https://doi.org/10.1038/s41586-018-0697-7'] * 3,\n",
     "    'start': [54, 288, 317],\n",
@@ -313,17 +300,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'The table has {table.shape[0]} rows.')"
+    "print(f'The table has {table_extractions.shape[0]} rows.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Iterator, Dict\n",
@@ -354,17 +337,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotations = represent_as_annotations(table)"
+    "annotations = represent_as_annotations(table_extractions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TEMPORARY Real version to come. Just to set the structure. Very slow: 1.3 millions triples.\n",
@@ -406,11 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
