Update after adding Sequence Ontology and doubling ontology terms

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -274,9 +274,7 @@
    "source": [
     "# TEMPORARY Enable people to run the following part outside of DGX-1.\n",
     "import pandas as pd\n",
-    "\n",
     "! wget -O extractions_example.csv 'https://drive.google.com/uc?export=download&id=11BBtkKsamru4kjUNev8lO_ulNMf7m3Ta'\n",
-    "\n",
     "table_extractions = pd.read_csv('extractions_example.csv', sep=';')"
    ]
   },
@@ -388,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPORARY Retrieve entity_linking-terms.pkl (~ 5 MB).\n",
+    "# TEMPORARY Retrieve entity_linking-terms.pkl (~ 15 MB).\n",
     "! wget -O entity_linking-terms.pkl 'https://drive.google.com/uc?export=download&id=1DyA9WL1YpEBO37KkDSCY3f1LWFfscO7F'"
    ]
   },
@@ -401,14 +399,29 @@
     "import pickle\n",
     "\n",
     "with open('entity_linking-terms.pkl', 'rb') as f:\n",
-    "    # TODO Linking to more ontologies than ChEBI is coming in the next steps.\n",
-    "    ontology = pickle.load(f)\n",
-    "\n",
+    "    # As of 19.05.2020 17:00, links to ChEBI and SO.\n",
+    "    ontology = pickle.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'The entity linking considers {len(ontology)} terms.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "linker = EntityLinker(ontology)\n",
-    "\n",
     "linker.train()\n",
-    "\n",
-    "# Note: Takes around 12 secs on a BBP issued MacBook Pro."
+    "# Note: Takes around 46 secs on a BBP issued MacBook Pro."
    ]
   },
   {
@@ -441,7 +454,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "enriched_annotations = list(enrich_annotations(annotations, linker))"
+    "%%time\n",
+    "enriched_annotations = list(enrich_annotations(annotations, linker))\n",
+    "# Note: Takes around 18 secs on a BBP issued MacBook Pro."
    ]
   },
   {
@@ -467,7 +482,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knowledge_graph = load_knowledge_graph(enriched_annotations)"
+    "%%time\n",
+    "knowledge_graph = load_knowledge_graph(enriched_annotations)\n",
+    "# Note: Takes around 10 secs on a BBP issued MacBook Pro."
    ]
   },
   {
@@ -478,13 +495,6 @@
    "source": [
     "print(f'The knowledge graph has {len(knowledge_graph)} triples.')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
