[BBS-66]: Link between Search Engine and Text Mining Tool

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -42,7 +42,32 @@
     "\n",
     "import bbsearch.embedding_models as embedding_models\n",
     "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
-    "from bbsearch.widget import Widget"
+    "from bbsearch.widget import Widget\n",
+    "from bbsearch.article_saver import ArticleSaver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 1\n",
+    "%aimport bbsearch.widget\n",
+    "%aimport bbsearch.article_saver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
    ]
   },
   {
@@ -104,6 +129,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to work locally\n",
+    "data_path = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/code/tests/data/CORD19_samples/')\n",
+    "assets_path = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/assets/')\n",
+    "embeddings_path = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/code/notebooks/data/embeddings/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "models_to_load = [\"SBioBERT\",\"BSV\"]\n",
     "embeddings_models = dict()\n",
     "precomputed_embeddings = dict()\n",
@@ -115,7 +152,7 @@
     "        \n",
     "    precomputed_embeddings[model] = np.load(embeddings_path / model / f'{model}.npy').astype('float32')  \n",
     "    # astype('float32') speeds up the search\n",
-    "database = sqlite3.connect('/raid/covid_data/data/v7/cord19_v1.db')"
+    "database = sqlite3.connect('/Users/edelattr/Documents/Projects/BlueBrainSearch/code/notebooks/data/cord19_test.db')"
    ]
   },
   {
@@ -124,8 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bbs_widget = Widget(embeddings_models, precomputed_embeddings, database)\n",
-    "bbs_widget.display()"
+    "article_saver = ArticleSaver(database=database)"
    ]
   },
   {
@@ -133,7 +169,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bbs_widget = Widget(embeddings_models, precomputed_embeddings, database, article_saver=article_saver)\n",
+    "bbs_widget.display()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -202,7 +241,7 @@
     "ee_model = spacy.load(\"en_ner_craft_md\")\n",
     "\n",
     "# Relations Extractors (RE)\n",
-    "PATH_ASSETS = Path('/raid/covid_data/assets')\n",
+    "PATH_ASSETS = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/assets/scibert_chemprot/')\n",
     "PATH_CHEMPROT_TRAINED_MODEL = PATH_ASSETS / 'scibert_chemprot.tar.gz'\n",
     "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
     "\n",
@@ -227,8 +266,40 @@
    "outputs": [],
    "source": [
     "# Define Widgets\n",
-    "bbs_widgets = OrderedDict()\n",
+    "bbs_widgets = OrderedDict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbs_widgets['articles_button'] = ipywidgets.Button(\n",
+    "    description='Extract Entities & Properties for chosen articles!',\n",
+    "    layout=ipywidgets.Layout(width='60%')\n",
+    ")\n",
     "\n",
+    "def article_button(b):\n",
+    "    global table_extractions\n",
+    "    bbs_widgets['out'].clear_output()\n",
+    "    complete_text = ''\n",
+    "    with bbs_widgets['out']:\n",
+    "        article_saver.retrieve_text()\n",
+    "        for text in article_saver.articles_text:\n",
+    "            complete_text += text\n",
+    "        table_extractions = text_mining_pipeline(complete_text, return_prob=False)\n",
+    "        display(table_extractions)\n",
+    "        \n",
+    "bbs_widgets['articles_button'].on_click(article_button)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# \"Input Text\" Widget\n",
     "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
     "        value=DEFAULT_TEXT,\n",
@@ -563,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.5"
   },
   "toc-autonumbering": true
  },
