Modify BBS_BBG_POC notebook to work on DGX1

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,30 +44,6 @@
     "from bbsearch.mining import ChemProt, TextMiningPipeline\n",
     "from bbsearch.widget import Widget\n",
     "from bbsearch.article_saver import ArticleSaver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 1\n",
-    "%aimport bbsearch.widget\n",
-    "%aimport bbsearch.article_saver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%javascript\n",
-    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
-    "    return false;\n",
-    "}"
    ]
   },
   {
@@ -112,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,19 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# to work locally\n",
-    "data_path = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/code/tests/data/CORD19_samples/')\n",
-    "assets_path = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/assets/')\n",
-    "embeddings_path = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/code/notebooks/data/embeddings/')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,12 +116,12 @@
     "        \n",
     "    precomputed_embeddings[model] = np.load(embeddings_path / model / f'{model}.npy').astype('float32')  \n",
     "    # astype('float32') speeds up the search\n",
-    "database = sqlite3.connect('/Users/edelattr/Documents/Projects/BlueBrainSearch/code/notebooks/data/cord19_test.db')"
+    "database = sqlite3.connect(data_path / 'cord19_v1.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,9 +130,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3648976b4176420e97a0755d8fc3cb29",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(ToggleButtons(description='Model for Sentence Embedding', options=('BSV', 'SBioBERT'), tooltips…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "bbs_widget = Widget(embeddings_models, precomputed_embeddings, database, article_saver=article_saver)\n",
     "bbs_widget.display()"
@@ -211,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,9 +275,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4fd22ee2faa4461d812d8a1b00407e94",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Button(description='Extract Entities & Properties for chosen articles!', layout=Layout(width='6…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# \"Input Text\" Widget\n",
     "bbs_widgets['input_text'] = ipywidgets.Textarea(\n",
