Small changes for DGX1

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -205,8 +205,7 @@
     "ee_model = spacy.load(\"en_ner_craft_md\")\n",
     "\n",
     "# Relations Extractors (RE)\n",
-    "PATH_ASSETS = Path('/Users/edelattr/Documents/Projects/BlueBrainSearch/assets/scibert_chemprot/')\n",
-    "PATH_CHEMPROT_TRAINED_MODEL = PATH_ASSETS / 'scibert_chemprot.tar.gz'\n",
+    "PATH_CHEMPROT_TRAINED_MODEL = assets_path / 'scibert_chemprot.tar.gz'\n",
     "re_models = {('CHEBI', 'GGP'): [ChemProt(PATH_CHEMPROT_TRAINED_MODEL)]}\n",
     "\n",
     "# Full Pipeline\n",
