Change line in entity linking

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -249,7 +249,7 @@
     "    complete_text = ''\n",
     "    with bbs_widgets['out']:\n",
     "        article_saver.retrieve_text()\n",
-    "        for text in article_saver.articles_text:\n",
+    "        for article_infos, text in article_saver.articles_text.items():\n",
     "            complete_text += text\n",
     "        table_extractions = text_mining_pipeline(complete_text, return_prob=False)\n",
     "        display(table_extractions)\n",
