--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -249,9 +249,9 @@
     "    complete_text = ''\n",
     "    with bbs_widgets['out']:\n",
     "        article_saver.retrieve_text()\n",
+    "        table_extractions = pd.DataFrame()\n",
     "        for article_infos, text in article_saver.articles_text.items():\n",
-    "            complete_text += text\n",
-    "        table_extractions = text_mining_pipeline(complete_text, return_prob=False)\n",
+    "            table_extractions = table_extractions.append(text_mining_pipeline(text, article_id=article_infos[0], return_prob=False))\n",
     "        display(table_extractions)\n",
     "        \n",
     "bbs_widgets['articles_button'].on_click(article_button)"
