Add cell in BBS_BBG_POC to display status of ArticleSaver

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -142,6 +142,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Status of the Article Saver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = article_saver.summary_table()\n",
+    "display(table)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Set schemas\n",
     "The user defines the KG schema."
    ]
