Add 1st part of entity disambiguation for entity linking

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -336,10 +336,11 @@
     "\n",
     "class Candidate:\n",
     "    \n",
-    "    def __init__(self, identifier, term, score):\n",
+    "    def __init__(self, identifier, term, definition, score):\n",
+    "        self.score = score\n",
     "        self.identifier = identifier\n",
     "        self.term = term\n",
-    "        self.score = score\n",
+    "        self.definition = definition\n",
     "    \n",
     "    def __repr__(self):\n",
     "        attrs = (f\"{k}={v!r}\" for k, v in self.__dict__.items())\n",
@@ -347,19 +348,27 @@
     "\n",
     "class EntityLinker:\n",
     "    \n",
-    "    def __init__(self, ontology):\n",
+    "    def __init__(self, ontology, nlp):\n",
     "        self.terms = None\n",
     "        self.model = None\n",
     "        self.index = None\n",
-    "        self.ontology = list(ontology.items())\n",
+    "        self.ontology = [(k, v[0], v[1]) for k, v in ontology.items()]\n",
+    "        self.nlp = nlp\n",
     "    \n",
     "    def link(self, mentions):\n",
-    "        # TODO Entity disambiguation is coming as the next step.\n",
-    "        return self.candidates(mentions, limit=1)\n",
+    "        selections = self.candidates(mentions)\n",
+    "        disambiguations = [self.disambiguate(mention, candidates)\n",
+    "                           for mention, candidates in zip(mentions, selections)]\n",
+    "        return [x[0] if x else None for x in disambiguations]\n",
     "    \n",
-    "    def disambiguate(self):\n",
-    "        # TODO Entity disambiguation is coming as the next step.\n",
-    "        pass\n",
+    "    def disambiguate(self, mention, candidates):\n",
+    "        # FIXME Thresholding.\n",
+    "        # FIXME Used as a proxy until this is done during the other NLP operations.\n",
+    "        doc = self.nlp(mention)\n",
+    "        similarities = [(doc.similarity(self.nlp(x.definition.replace(mention, ''))), x)\n",
+    "                        for x in candidates if x.definition]\n",
+    "        scored = [(sim * (1-cand.score), sim, cand) for sim, cand in similarities]\n",
+    "        return sorted(scored, key=lambda x: x[0], reverse=True)\n",
     "    \n",
     "    def candidates(self, mentions, limit=3, threshold=0.6):\n",
     "        embeddings = self.model.transform(mentions)\n",
@@ -371,7 +380,7 @@
     "        self.model = TfidfVectorizer(analyzer='char', ngram_range=(3, 3), max_df=0.95,\n",
     "                                     max_features=int(len(self.ontology)*0.1),\n",
     "                                     dtype=np.float32, norm='l2')\n",
-    "        terms = [x for _, x in self.ontology]\n",
+    "        terms = [x for _, x, _ in self.ontology]\n",
     "        embeddings = self.model.fit_transform(terms)\n",
     "        flags = np.array(embeddings.sum(axis=1) != 0).reshape(-1)\n",
     "        filtered_embeddings = embeddings[flags]\n",
@@ -386,7 +395,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPORARY Retrieve entity_linking-terms.pkl (~ 15 MB).\n",
+    "# TEMPORARY Retrieve entity_linking-terms.pkl (~ 26 MB).\n",
     "! wget -O entity_linking-terms.pkl 'https://drive.google.com/uc?export=download&id=1DyA9WL1YpEBO37KkDSCY3f1LWFfscO7F'"
    ]
   },
@@ -418,8 +427,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "    nlp = ee_model\n",
+    "except Exception:\n",
+    "    import spacy\n",
+    "    nlp = spacy.load(\"en_ner_craft_md\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
-    "linker = EntityLinker(ontology)\n",
+    "linker = EntityLinker(ontology, nlp)\n",
     "linker.train()\n",
     "# Note: Takes around 46 secs on a BBP issued MacBook Pro."
    ]
@@ -437,10 +459,9 @@
     "    def _(ann, can):\n",
     "        new = deepcopy(ann)\n",
     "        if can:\n",
-    "            # TODO Entity disambiguation is coming as the next step.\n",
     "            new['body'] = {\n",
-    "                '@id': can[0].identifier,\n",
-    "                'label': can[0].term,\n",
+    "                '@id': can[2].identifier,\n",
+    "                'label': can[2].term,\n",
     "            }\n",
     "        return new\n",
     "    mentions = [x['target']['selector']['value'] for x in annotations]\n",
@@ -573,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc-autonumbering": true
  },
