Improved entity disambiguation ranking

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -272,10 +272,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPORARY Enable people to run the following part outside of DGX-1.\n",
     "import pandas as pd\n",
-    "! wget -O extractions_example.csv 'https://drive.google.com/uc?export=download&id=11BBtkKsamru4kjUNev8lO_ulNMf7m3Ta'\n",
-    "table_extractions = pd.read_csv('extractions_example.csv', sep=';')"
+    "\n",
+    "if globals().get('table_extractions') is None:\n",
+    "    ! wget -O extractions_example.csv 'https://drive.google.com/uc?export=download&id=11BBtkKsamru4kjUNev8lO_ulNMf7m3Ta'\n",
+    "    table_extractions = pd.read_csv('extractions_example.csv', sep=';')"
    ]
   },
   {
@@ -330,6 +331,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
+    "\n",
+    "# Note: The file is around 26 MB.\n",
+    "! wget -O entity_linking-terms.pkl 'https://drive.google.com/uc?export=download&id=1DyA9WL1YpEBO37KkDSCY3f1LWFfscO7F'\n",
+    "\n",
+    "with open('entity_linking-terms.pkl', 'rb') as f:\n",
+    "    ontology = pickle.load(f)\n",
+    "\n",
+    "ontologies = ['ChEBI', 'SO']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'The entity linking considers {len(ontology)} terms from:', *ontologies, sep='\\n - ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import faiss\n",
     "import numpy as np\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
@@ -357,24 +384,30 @@
     "    \n",
     "    def link(self, mentions):\n",
     "        selections = self.candidates(mentions)\n",
-    "        disambiguations = [self.disambiguate(mention, candidates)\n",
-    "                           for mention, candidates in zip(mentions, selections)]\n",
-    "        return [x[0] if x else None for x in disambiguations]\n",
+    "        return [self.disambiguate(mention, candidates)\n",
+    "                for mention, candidates in zip(mentions, selections)]\n",
     "    \n",
-    "    def disambiguate(self, mention, candidates):\n",
-    "        # FIXME Thresholding.\n",
-    "        # FIXME Used as a proxy until this is done during the other NLP operations.\n",
-    "        doc = self.nlp(mention)\n",
-    "        similarities = [(doc.similarity(self.nlp(x.definition.replace(mention, ''))), x)\n",
-    "                        for x in candidates if x.definition]\n",
-    "        scored = [(sim * (1-cand.score), sim, cand) for sim, cand in similarities]\n",
-    "        return sorted(scored, key=lambda x: x[0], reverse=True)\n",
+    "    def disambiguate(self, mention, candidates, threshold=0.6):\n",
+    "        def _(cands):\n",
+    "            # FIXME Used as a proxy until this is done during the other NLP operations.\n",
+    "            doc = self.nlp(mention)\n",
+    "            similarities = [(doc.similarity(self.nlp(x.definition.replace(mention, ''))), x)\n",
+    "                            for x in cands if x.definition]\n",
+    "            ranked = sorted(similarities, key=lambda x: x[0], reverse=True)\n",
+    "            return ranked[0]\n",
+    "        zeros = [x for x in candidates if x.score == 0]\n",
+    "        if zeros:\n",
+    "            chosen = _(zeros)\n",
+    "            return chosen\n",
+    "        else:\n",
+    "            chosen = _(candidates)\n",
+    "            return chosen if chosen[0] >= threshold else None\n",
     "    \n",
-    "    def candidates(self, mentions, limit=3, threshold=0.6):\n",
+    "    def candidates(self, mentions, limit=3):\n",
     "        embeddings = self.model.transform(mentions)\n",
     "        distances, indexes = self.index.search(embeddings.toarray(), limit)\n",
-    "        return [[Candidate(*self.terms[i], d) for i, d in zip(indexes[k], distances[k])\n",
-    "                 if d <= threshold] for k in range(len(mentions))]\n",
+    "        return [[Candidate(*self.terms[i], d) for i, d in zip(indexes[k], distances[k])]\n",
+    "                for k in range(len(mentions))]\n",
     "    \n",
     "    def train(self):\n",
     "        self.model = TfidfVectorizer(analyzer='char', ngram_range=(3, 3), max_df=0.95,\n",
@@ -395,43 +428,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TEMPORARY Retrieve entity_linking-terms.pkl (~ 26 MB).\n",
-    "! wget -O entity_linking-terms.pkl 'https://drive.google.com/uc?export=download&id=1DyA9WL1YpEBO37KkDSCY3f1LWFfscO7F'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "\n",
-    "with open('entity_linking-terms.pkl', 'rb') as f:\n",
-    "    # As of 19.05.2020 17:00, links to ChEBI and SO.\n",
-    "    ontology = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f'The entity linking considers {len(ontology)} terms.')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "try:\n",
     "    nlp = ee_model\n",
-    "except Exception:\n",
+    "except NameError:\n",
     "    import spacy\n",
-    "    nlp = spacy.load(\"en_ner_craft_md\")"
+    "    nlp = spacy.load('en_ner_craft_md')"
    ]
   },
   {
@@ -443,7 +444,7 @@
     "%%time\n",
     "linker = EntityLinker(ontology, nlp)\n",
     "linker.train()\n",
-    "# Note: Takes around 46 secs on a BBP issued MacBook Pro."
+    "# Note: Takes around 45 secs on a BBP issued MacBook Pro."
    ]
   },
   {
@@ -460,8 +461,8 @@
     "        new = deepcopy(ann)\n",
     "        if can:\n",
     "            new['body'] = {\n",
-    "                '@id': can[2].identifier,\n",
-    "                'label': can[2].term,\n",
+    "                '@id': can[1].identifier,\n",
+    "                'label': can[1].term,\n",
     "            }\n",
     "        return new\n",
     "    mentions = [x['target']['selector']['value'] for x in annotations]\n",
@@ -477,7 +478,7 @@
    "source": [
     "%%time\n",
     "enriched_annotations = list(enrich_annotations(annotations, linker))\n",
-    "# Note: Takes around 18 secs on a BBP issued MacBook Pro."
+    "# Note: Takes around 20 secs on a BBP issued MacBook Pro."
    ]
   },
   {
@@ -505,7 +506,7 @@
    "source": [
     "%%time\n",
     "knowledge_graph = load_knowledge_graph(enriched_annotations)\n",
-    "# Note: Takes around 10 secs on a BBP issued MacBook Pro."
+    "# Note: Takes around 8 secs on a BBP issued MacBook Pro."
    ]
   },
   {
