Add comments + nltk downloads in POC notebook

--- a/notebooks/BBS_BBG_poc.ipynb
+++ b/notebooks/BBS_BBG_poc.ipynb
@@ -105,6 +105,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')\n",
+    "\n",
     "models_to_load = [\"SBioBERT\",\"BSV\"]\n",
     "embeddings_models = dict()\n",
     "precomputed_embeddings = dict()\n",
